pkginclude_HEADERS = OgreBorderPanelGuiElement.h \
		 OgreBorderButtonGuiElement.h \
		 OgreButtonGuiElement.h \
		 OgreCursorGuiElement.h \
		 OgreGuiElementFactories.h \
		 OgreGuiElementPrerequisites.h \
		 OgreListGuiElement.h \
		 OgrePanelGuiElement.h \
		 OgrePopupMenuGuiElement.h \
		 OgreScrollBarGuiElement.h \
		 OgreTextAreaGuiElement.h \
		 OgreTextBoxGuiElement.h \
		 OgreTTYGuiElement.h 
