INCLUDES = -I../../../OgreMain/include 

lib_LTLIBRARIES=libOgreReferenceAppLayer.la

libOgreReferenceAppLayer_la_SOURCES = OgreRefAppApplicationObject.cpp \
			OgreRefAppOgreHead.cpp \
			OgreRefAppJoint.cpp \
			OgreRefAppJointSubtypes.cpp \
			OgreRefAppPlane.cpp \
			OgreRefAppWorld.cpp

libOgreReferenceAppLayer_la_LIBADD= -lOgreMain -lode
