noinst_PROGRAMS=GTKDemo
INCLUDES=-I$(top_builddir)/PlatformManagers/gtk/include -I$(top_builddir)/Samples/Common/include $(PLATFORM_CFLAGS)
GTKDemo_SOURCES=GTKDemo.cpp
GTKDemo_LDFLAGS=-L$(top_builddir)/PlatformManagers/gtk/src/.libs -L$(top_builddir)/OgreMain/src
GTKDemo_LDADD=-lOgreMain -lOgrePlatform
