INCLUDES = $(STLPORT_CFLAGS) -I$(top_srcdir)/Samples/SkeletalAnimation/include -I$(top_srcdir)/OgreMain/include -I$(top_srcdir)/Samples/Common/include

noinst_PROGRAMS = ParticleFX

ParticleFX_SOURCES = SkeletalAnimation.cpp
ParticleFX_LDFLAGS = -L$(top_srcdir)/OgreMain/src
ParticleFX_LDADD = -lOgreMain
